2010-12-18  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.14b1

	* iTunesFSFormatter.[hm]: added -isPathFormat and
	  -pathComponentsByFormattingObject: in order to determine if a
	  formatter describes a path and if so, get this path (optimized
	  by stripping empty path components and ready for display by
	  properly escaping it)

	* iTunesPlaylist.[hm]: changed internals to allow /both/ tracks and
	  children to co-exist in a playlist (previously, this was impossible
	  due to the way that it's impossible to mix both in iTunes).
	  Added -name to also display the persistentId if the new
	  "ShowPersistentIDs" default is set to YES.
	  Added per-playlist formatters, which require the persistentId of
	  playlists to be known. Changed -generatePrettyTrackNames to
	  detect appropriate formatters and detect whether these describe a
	  path (hierarchy). If so, a new virtual playlist hierarchy is
	  created and tracks moved these new playlists in order to reflect
	  this hierarchy.

2010-09-22  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.13

	* Released after testing confirmed everything works as expected

2010-09-15  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.13b2

	* IPhoneDiskIPodLibrary.[hm]: removed, moved contents to
	  iPodLibrary.[hm] for simplicity's sake

	* iPodLibrary.[hm]: added previous contents from
	  IPhoneDiskIPodLibrary.[hm], also added support for com.apple.afc2
	  mounted iPhones.

	* iTunesFileSystem.m: added JBiPhoneDiskIPodLibrary detection

	* v1.1.13b1

	* iPodLibrary.m: forgot to reset jump offset after decompressing the
	  library, fixed. Improved debug logs and added new
	  'iPodLibraryDebugVerbose' switch for verbose debugging.

	* iTunesFileSystem.m: work seamlessly in conjunction with iPhoneDisk
	  by faking its default mountpoint into the list of mount points to
	  check

2010-07-09  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.12

	* project.pbxproj: corrected 10.6 SDK dependency to be 10.5 instead,